interpreter-janeklang/tests/good/16_breakContinue_1.janek
int main() {
    int i = 0;
    while (i < 10) {
        i = i + 1;
        if (i % 2 == 0) {
            continue;
        }
        print(i);
        if (i == 7) {
            break;
        }
    }
    return 0;
}
