interpreter-janeklang/tests/bad/03_BoolAsString_1.janek
int main(){
    bool b = true;
    string s = b;
    return 0;
}